testing/errors/expectedtwohexdigits1.a
	*=$1000
	!tx "ab\x" 	; -> "Expected two hex digits after \x sequence."
